# starlette-csrf

./: Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
.github/workflows/: build.yml
starlette_csrf/: __init__.py  middleware.py
tests/: conftest.py  test_middleware.py
