[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "starlette_csrf"

[project]
name = "starlette-csrf"
authors = [
  { name = "François Voron", email = "fvoron@gmail.com" }
]
description = "Starlette middleware implementing Double Submit Cookie technique to mitigate CSRF"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Session",
]
requires-python = ">=3.7"
dependencies = [
    "itsdangerous >=2.0.1,<3.0.0",
    "starlette >=0.14.2,<0.20.0"
]

[project.optional-dependencies]
dev = [
    "asgi_lifespan",
    "flake8",
    "flit",
    "httpx",
    "pytest",
    "isort",
    "pytest-asyncio",
    "black",
    "mypy",
    "codecov",
    "pytest-cov",
    "bumpversion",
]

[project.urls]
Documentation = "https://github.com/frankie567/starlette-csrf"
