[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=starlette_csrf/ --cov-report=term-missing --cov-fail-under=100"
asyncio_mode = "auto"

[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "starlette_csrf/__init__.py"

[tool.hatch.envs.default]
dependencies = [
    "asgi_lifespan",
    "httpx",
    "pytest",
    "isort",
    "pytest-asyncio",
    "black",
    "mypy",
    "pytest-cov",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov-xml = "pytest --cov-report=xml"
lint = [
  "isort ./starlette_csrf ./tests",
  "black .",
  "mypy starlette_csrf/",
]
lint-check = [
  "isort --check-only ./starlette_csrf ./tests",
  "black --check .",
  "mypy starlette_csrf/",
]

[tool.hatch.build.targets.sdist]
support-legacy = true  # Create setup.py

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "starlette-csrf"
authors = [
  { name = "François Voron", email = "fvoron@gmail.com" }
]
description = "Starlette middleware implementing Double Submit Cookie technique to mitigate CSRF"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Session",
]
requires-python = ">=3.7"
dependencies = [
    "itsdangerous >=2.0.1,<3.0.0",
    "starlette >=0.14.2"
]

[project.urls]
Documentation = "https://github.com/frankie567/starlette-csrf"
Source = "https://github.com/frankie567/starlette-csrf"
