[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
extend-select = ["I", "TRY", "UP"]

[tool.pytest.ini_options]
addopts = "--cov=starlette_csrf/ --cov-report=term-missing --cov-fail-under=100"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "starlette_csrf/__init__.py"

[tool.hatch.envs.default]
installer = "uv"
dependencies = [
    "asgi_lifespan",
    "httpx",
    "pytest",
    "ruff",
    "pytest-asyncio",
    "mypy",
    "pytest-cov",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov-xml = "pytest --cov-report=xml"
lint = [
  "ruff format .",
  "ruff check --fix .",
  "mypy starlette_csrf/",
]
lint-check = [
  "ruff format --check .",
  "ruff check .",
  "mypy starlette_csrf/",
]

[tool.hatch.build.targets.sdist]
support-legacy = true  # Create setup.py

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "starlette-csrf"
authors = [
  { name = "François Voron", email = "fvoron@gmail.com" }
]
description = "Starlette middleware implementing Double Submit Cookie technique to mitigate CSRF"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Session",
]
requires-python = ">=3.9"
dependencies = [
    "itsdangerous >=2.0.1,<3.0.0",
    "starlette >=0.14.2"
]

[project.urls]
Documentation = "https://github.com/frankie567/starlette-csrf"
Source = "https://github.com/frankie567/starlette-csrf"
